Add note about --add-modules jdk.incubator.vector